# claude-reset-scheduler

./: .gitignore  MANIFEST.in  README.md  claude-reset-scheduler.service  claude-reset-scheduler.timer  config.example.yaml  cron-alternative.sh  install.sh  pyproject.toml  test.sh  uninstall.sh
docs/plans/: 2026-01-26-interactive-installer-design.md  2026-01-26-interactive-installer.md
scripts/: claude-reset.sh
src/: cli.py  config.py  logger.py  scheduler.py
src/claude_reset_scheduler/: __init__.py  __main__.py  config.py  logger.py  pinger.py  scheduler.py
systemd/: claude-reset-scheduler.service  claude-reset-scheduler.timer  claude-reset.service  claude-reset.timer
tests/: test_install.md  test_scheduler.py
